2008-12-30  Sam Steingold  <sds@gnu.org>

	* unixaux.d (fd_read): when errno is ECONNRESET, close fd to avoid
	SIGPIPE on further accesses (see tests/econnreset.lisp)
	Reported by Don Cohen

2008-12-30  Sam Steingold  <sds@gnu.org>

	* error.d (OS_filestream_error): when stream is a stream,
	but not a file stream, signal stream-error instead of os-error
	* errunix.d, errwin32.d (OS_error_arg): replaces OS_file_error
	* lispbibl.d (OS_file_error): define using OS_error_arg

2008-12-30  Sam Steingold  <sds@gnu.org>

	* pathname.d (task_t): use a dedicated type for
	directory_search instead of signean

2008-12-29  Sam Steingold  <sds@gnu.org>

	* pathname.d (namestring_kind_t): use a dedicated type for
	classify_namestring instead of signean

2008-12-29  Sam Steingold  <sds@gnu.org>

	* stream.d (buffered_t): use a dedicated type for
	test_buffered_arg instead of signean

2008-12-29  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (listen_t): use a dedicated type instead of signean
	(listen_char, listen_byte): update declarations
	(ls_avail, ls_eof, ls_wait, ls_avail_p, ls_eof_p, ls_wait_p): remove
	* debug.d (read_form): update listen_char() calls
	* io.d (PEEK-CHAR, LISTEN, READ-CHAR-NO-HANG): ditto
	* sequence.d (READ-BYTE-SEQUENCE): update listen_byte() call
	* stream.d: update all listen functions and their invocations
	throughout the file

2008-12-29  Sam Steingold  <sds@gnu.org>

	* modules/clx/mit-clx/Makefile (clx.mem): pass file name to
	saveinitmem instead of using mv

2008-12-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-form-table): handle CONCATENATE with c-CONCATENATE
	(c-CONCATENATE): (concatenate 'string ...) ==> (string-concat ...)
	if all the arguments are certain to be strings

2008-12-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): add more default
	special symbols per thread bindings

2008-12-25  Vladimir Tzankov  <vtzankov@gmail.com>
